--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,8 @@
-body {
-    margin: 3px;
+
+@import 'fonts';
+
+#root {
+    background-image: url('../images/C-3PO.jpg');
+    font-family: Gotham;
+    color: white;
 }
