--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,21 +2,18 @@
 
 @font-face {
     font-family: Gotham;
+    font-weight: 300;
     src: url('../fonts/GothamLight.otf');
-    font-weight: lighter;
-    font-style: normal;
 }
 
 @font-face {
     font-family: Gotham;
+    font-weight: 500;
     src: url('../fonts/GothamMedium.ttf');
-    font-weight: bold;
-    font-style: normal;
 }
 
 @font-face {
     font-family: Gotham;
-    src: url('../fonts/GothamBold.ttf');
-    font-weight: bolder;
-    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/GothamBold.otf');
 }
