--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,9 @@
 @import 'fonts';
 @import 'main';
 @import 'colors';
+@import 'footer';
+@import 'header';
 
 // Activities
 @import 'activities/splash';
+@import 'activities/home';
