--- a/docs/main.css
+++ b/docs/main.css
@@ -65,6 +65,34 @@ body {
   font-weight: 500;
   font-size: 14px; }
 
+.footer {
+  font-size: .7rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  width: 100%; }
+  .footer a {
+    text-decoration: none; }
+  .footer__item {
+    color: #fe5722;
+    padding: 10px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    border-top: 4px solid white; }
+    .footer__item [data-icon] {
+      margin-bottom: 8px;
+      font-size: 1.6rem; }
+    .footer__item.active {
+      border-top: 4px solid #fe5722; }
+
+.header {
+  background: #fe5722; }
+
 .splash {
   width: 100%;
   height: 100%;
@@ -74,6 +102,31 @@ body {
   background: #fe5722; }
   .splash img {
     width: 50%; }
+
+.home {
+  position: relative;
+  min-height: 100%;
+  overflow: hidden; }
+  .home__header {
+    padding: 15px 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center; }
+    .home__header-logo {
+      width: 22%; }
+  .home:after {
+    content: "";
+    background: #fe5722;
+    position: absolute;
+    z-index: -1;
+    width: 140%;
+    height: 20rem;
+    border-radius: 50%;
+    left: -18%;
+    top: 0; }
+  .home__content {
+    padding: 1.5rem; }
 
 
 /*# sourceMappingURL=main.css.map*/
