--- a/docs/main.css
+++ b/docs/main.css
@@ -72,7 +72,8 @@ body {
   justify-content: space-around;
   position: fixed;
   bottom: 0;
-  width: 100%; }
+  width: 100%;
+  box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1); }
   .footer a {
     text-decoration: none; }
   .footer__item {
@@ -93,6 +94,41 @@ body {
 .header {
   background: #fe5722; }
 
+.header-item {
+  color: white;
+  padding: 0.5rem;
+  font-size: 1.4rem; }
+
+.restaurant-card {
+  margin: 2px;
+  margin-right: 12px;
+  width: 175px;
+  height: 230px;
+  box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  position: relative;
+  color: white;
+  background: white;
+  flex-shrink: 0; }
+  .restaurant-card__inner {
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
+    position: absolute;
+    padding: 5px;
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end; }
+  .restaurant-card__name {
+    font-size: 1.4rem;
+    margin-bottom: 5px; }
+  .restaurant-card__details {
+    font-size: .7rem;
+    display: flex;
+    flex-flow: row wrap; }
+  .restaurant-card__money {
+    color: green; }
+
 .splash {
   width: 100%;
   height: 100%;
@@ -108,10 +144,10 @@ body {
   min-height: 100%;
   overflow: hidden; }
   .home__header {
-    padding: 15px 10px;
+    padding: 15px 18px;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center; }
     .home__header-logo {
       width: 22%; }
@@ -125,8 +161,19 @@ body {
     border-radius: 50%;
     left: -18%;
     top: 0; }
-  .home__content {
-    padding: 1.5rem; }
+  .home__content .padded {
+    padding: 1.2rem; }
+  .home h1 {
+    font-size: 2rem; }
+  .home__restaurants {
+    padding: 0 1.2rem;
+    display: flex;
+    flex-flow: row nowrap;
+    overflow-x: scroll; }
+    .home__restaurants .restaurant-card__outer:last-child {
+      padding-right: 1.2rem; }
+  .home__more-ordered {
+    margin-top: 2rem; }
 
 
 /*# sourceMappingURL=main.css.map*/
