--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -6,6 +6,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    box-shadow: 0px -1px 18px rgba(0,0,0,.1);
 
     a {
         text-decoration: none;
