--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,10 @@
 @import 'fonts';
 @import 'main';
 @import 'colors';
-@import 'footer';
-@import 'header';
+@import 'components/footer';
+@import 'components/header';
+@import 'components/header-item';
+@import 'components/restaurant-card';
 
 // Activities
 @import 'activities/splash';
