--- a/docs/main.css
+++ b/docs/main.css
@@ -73,7 +73,8 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1); }
+  box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1);
+  background: white; }
   .footer a {
     text-decoration: none; }
   .footer__item {
