--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,6 +7,7 @@
     bottom: 0;
     width: 100%;
     box-shadow: 0px -1px 18px rgba(0,0,0,.1);
+    background: white;
 
     a {
         text-decoration: none;
