--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,8 @@
 @import 'components/header';
 @import 'components/header-item';
 @import 'components/restaurant-card';
+@import 'components/side-menu';
+@import 'components/rest-list';
 
 // Activities
 @import 'activities/splash';
