--- a/src/styles/components/_restaurant-card.scss
+++ b/src/styles/components/_restaurant-card.scss
@@ -1,29 +1,34 @@
 .restaurant-card {
     margin: 2px;
     margin-right: 12px;
-    width: 175px;
-    height: 230px;
+    width: 165px;
+    height: 200px;
     box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
+    border-radius: 18px;
+    overflow: hidden;
     position: relative;
     color: white;
     background: white;
     flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
     
     &__inner {
-        background: linear-gradient(transparent, rgba(0,0,0,.5));
+        background: linear-gradient(190deg, transparent, rgba(0,0,0,.7));
         position: absolute;
-        padding: 5px;
-        width: calc(100% - 10px);
-        height: calc(100% - 10px);
+        padding: 10px;
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-end;
     }
 
     &__name {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         margin-bottom: 5px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     &__details {
