Finish home page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'components/restaurant-card';
 @import 'components/side-menu';
 @import 'components/rest-list';
+@import 'components/category-card';
 
 // Activities
 @import 'activities/splash';
