--- a/src/styles/activities/_home.scss
+++ b/src/styles/activities/_home.scss
@@ -2,17 +2,17 @@
     position: relative;
     min-height: 100%;
     overflow: hidden;
-    padding: 4rem 0 2rem 0;
+    padding: 4rem 0 6rem 0;
 
     &__header {
-        padding: 15px 18px;
+        padding: 10px 18px;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
 
         &-logo {
-            width: 22%;
+            width: 80px;
         }
     }
 
@@ -33,6 +33,14 @@
 
         .padded {
             padding: 1.2rem;
+        }
+
+        .padded-x {
+            padding: 0 1.2rem;
+        }
+
+        .padded-y {
+            padding: 1.2rem 0;
         }
         
     }
@@ -66,5 +74,18 @@
     &__rest-list-view {
         display: flex;
         flex-flow: column nowrap;
+    }
+
+    &__category-list {
+        display: flex;
+        flex-flow: row wrap;
+
+        :nth-child(odd) {
+            margin-right: 3px;
+        }
+    
+        :nth-child(even) {
+            margin-left: 3px;
+        }
     }
 }
