--- a/src/styles/components/_rest-list.scss
+++ b/src/styles/components/_rest-list.scss
@@ -4,10 +4,10 @@
     align-items: center;
     flex-flow: row nowrap;
     background: white;
-    box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
     padding: 12px;
-    margin-bottom: .8rem;
+    margin-bottom: .5rem;
 
     &__image {
         width: 2.7rem;
@@ -37,5 +37,6 @@
 
     &__angle {
         font-size: 1.4rem;
+        color: $primary;
     }
 }
