--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -8,3 +8,49 @@ body {
     font-weight: 500;
     font-size: 14px;
 }
+
+.activity {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    padding: 4rem 0 6rem 0;
+
+    &__header {
+        padding: 10px 18px;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+
+        &-logo {
+            width: 80px;
+        }
+    }
+
+    &__section {
+        margin-top: .2rem;
+
+        .padded {
+            padding: 1.2rem;
+        }
+
+        .padded-x {
+            padding: 0 1.2rem;
+        }
+
+        .padded-y {
+            padding: 1.2rem 0;
+        }
+        
+    }
+
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.6rem;
+        font-weight: lighter;
+    }
+}
