--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,9 @@
 @import 'components/side-menu';
 @import 'components/rest-list';
 @import 'components/category-card';
+@import 'components/meal-list';
 
 // Activities
 @import 'activities/splash';
 @import 'activities/home';
+@import 'activities/restaurant';
