--- a/docs/main.css
+++ b/docs/main.css
@@ -65,6 +65,33 @@ body {
   font-weight: 500;
   font-size: 14px; }
 
+.activity {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  padding: 4rem 0 6rem 0; }
+  .activity__header {
+    padding: 10px 18px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center; }
+    .activity__header-logo {
+      width: 80px; }
+  .activity__section {
+    margin-top: .2rem; }
+    .activity__section .padded {
+      padding: 1.2rem; }
+    .activity__section .padded-x {
+      padding: 0 1.2rem; }
+    .activity__section .padded-y {
+      padding: 1.2rem 0; }
+  .activity h1 {
+    font-size: 2rem; }
+  .activity h2 {
+    font-size: 1.6rem;
+    font-weight: lighter; }
+
 .footer {
   font-size: .7rem;
   display: flex;
@@ -188,6 +215,38 @@ body {
   margin-bottom: 6px;
   padding: 6px; }
 
+.meal-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: row nowrap;
+  background: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 12px;
+  margin-bottom: .5rem; }
+  .meal-list__image {
+    width: 2.7rem;
+    height: 2.7rem;
+    border-radius: 6px;
+    background: #ccc;
+    margin-right: .8rem;
+    background-size: cover;
+    background-position: center; }
+  .meal-list__info {
+    display: flex;
+    flex-flow: column nowrap;
+    flex: 1; }
+  .meal-list__name {
+    font-size: 1rem;
+    margin-bottom: 3px; }
+  .meal-list__data {
+    font-size: .8rem;
+    font-weight: lighter; }
+  .meal-list__price {
+    color: #12b312;
+    font-size: 1rem; }
+
 .splash {
   width: 100%;
   height: 100%;
@@ -198,60 +257,77 @@ body {
   .splash img {
     width: 50%; }
 
-.home {
+.home:after {
+  content: "";
+  background: #fe5722;
+  position: absolute;
+  z-index: -1;
+  width: 140%;
+  height: 20rem;
+  border-radius: 50%;
+  left: -18%;
+  top: 0; }
+
+.home__restaurants {
+  padding: 0 1.2rem;
+  display: flex;
+  flex-flow: row nowrap;
+  overflow-x: scroll; }
+  .home__restaurants .restaurant-card__outer:last-child {
+    padding-right: 0.5rem; }
+  .home__restaurants::-webkit-scrollbar {
+    width: 0; }
+  .home__restaurants::-webkit-scrollbar-thumb {
+    width: 0; }
+
+.home__rest-list-view {
+  display: flex;
+  flex-flow: column nowrap; }
+
+.home__category-list {
+  display: flex;
+  flex-flow: row wrap; }
+  .home__category-list :nth-child(odd) {
+    margin-right: 3px; }
+  .home__category-list :nth-child(even) {
+    margin-left: 3px; }
+
+.restaurant__box {
+  width: 100%;
+  height: 40%;
+  background: #fe5722;
+  background-size: cover;
+  background-position: center;
   position: relative;
-  min-height: 100%;
-  overflow: hidden;
-  padding: 4rem 0 6rem 0; }
-  .home__header {
-    padding: 10px 18px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center; }
-    .home__header-logo {
-      width: 80px; }
-  .home:after {
+  color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  padding: 1.2rem;
+  margin-top: -3px; }
+  .restaurant__box:before {
     content: "";
-    background: #fe5722;
+    background: linear-gradient(190deg, transparent, rgba(0, 0, 0, 0.7));
     position: absolute;
-    z-index: -1;
-    width: 140%;
-    height: 20rem;
-    border-radius: 50%;
-    left: -18%;
-    top: 0; }
-  .home__section {
-    margin-top: .2rem; }
-    .home__section .padded {
-      padding: 1.2rem; }
-    .home__section .padded-x {
-      padding: 0 1.2rem; }
-    .home__section .padded-y {
-      padding: 1.2rem 0; }
-  .home h1 {
-    font-size: 2rem; }
-  .home__restaurants {
-    padding: 0 1.2rem;
-    display: flex;
-    flex-flow: row nowrap;
-    overflow-x: scroll; }
-    .home__restaurants .restaurant-card__outer:last-child {
-      padding-right: 0.5rem; }
-    .home__restaurants::-webkit-scrollbar {
-      width: 0; }
-    .home__restaurants::-webkit-scrollbar-thumb {
-      width: 0; }
-  .home__rest-list-view {
-    display: flex;
-    flex-flow: column nowrap; }
-  .home__category-list {
-    display: flex;
-    flex-flow: row wrap; }
-    .home__category-list :nth-child(odd) {
-      margin-right: 3px; }
-    .home__category-list :nth-child(even) {
-      margin-left: 3px; }
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; }
+  .restaurant__box .name {
+    font-size: 2rem;
+    font-weight: bolder;
+    text-overflow: ellipsis;
+    margin-bottom: 10px; }
+  .restaurant__box .name,
+  .restaurant__box .details {
+    z-index: 2; }
+
+.restaurant__meals {
+  display: flex;
+  flex-flow: column nowrap; }
 
 
 /*# sourceMappingURL=main.css.map*/
