--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,8 @@
 @import 'components/rest-list';
 @import 'components/category-card';
 @import 'components/meal-list';
+@import 'components/order-bar';
+@import 'components/checkout-card';
 
 // Activities
 @import 'activities/splash';
