--- a/docs/main.css
+++ b/docs/main.css
@@ -67,7 +67,6 @@ body {
 
 .activity {
   position: relative;
-  height: 100%;
   overflow: hidden;
   padding: 4rem 0 6rem 0; }
   .activity__header {
@@ -229,7 +228,7 @@ body {
     width: 2.7rem;
     height: 2.7rem;
     border-radius: 6px;
-    background: #ccc;
+    background: #f9f9f9;
     margin-right: .8rem;
     background-size: cover;
     background-position: center; }
@@ -246,6 +245,58 @@ body {
   .meal-list__price {
     color: #12b312;
     font-size: 1rem; }
+  .meal-list[active=true] {
+    border: 2px solid #fe5722; }
+
+.order-bar {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0px -1px 18px rgba(0, 0, 0, 0.1);
+  background: white;
+  height: 4rem;
+  box-sizing: border-box;
+  padding: 8px 1.2rem; }
+  .order-bar__total {
+    display: flex;
+    flex-flow: column nowrap; }
+    .order-bar__total .title {
+      font-weight: lighter;
+      text-transform: uppercase;
+      margin-bottom: 3px;
+      font-size: .8rem; }
+    .order-bar__total .total-price {
+      font-size: 1.4rem;
+      color: #12b312; }
+  .order-bar__button button {
+    background: #fe5722;
+    border: 0;
+    border-radius: 10px;
+    color: white;
+    font-family: Gotham;
+    font-weight: bolder;
+    font-size: 0.8rem;
+    padding: 0.8rem 0.5rem; }
+
+.checkout-card {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  border-radius: 11px;
+  padding: 8px 10px;
+  text-align: center;
+  background: #ccc;
+  color: white;
+  margin-right: 10px; }
+  .checkout-card .text {
+    font-size: .8rem;
+    margin: 2px 0; }
+  .checkout-card__hour {
+    font-size: 1.2rem; }
 
 .splash {
   width: 100%;
@@ -283,6 +334,9 @@ body {
 .home__rest-list-view {
   display: flex;
   flex-flow: column nowrap; }
+  .home__rest-list-view a {
+    color: #000;
+    text-decoration: none; }
 
 .home__category-list {
   display: flex;
@@ -294,7 +348,7 @@ body {
 
 .restaurant__box {
   width: 100%;
-  height: 40%;
+  height: 300px;
   background: #fe5722;
   background-size: cover;
   background-position: center;
@@ -328,6 +382,18 @@ body {
 .restaurant__meals {
   display: flex;
   flex-flow: column nowrap; }
+
+.restaurant__checkout {
+  padding: 0 1.2rem;
+  display: flex;
+  flex-flow: row nowrap;
+  overflow-x: scroll; }
+  .restaurant__checkout .checkout-card:last-child {
+    padding-right: 10px; }
+  .restaurant__checkout::-webkit-scrollbar {
+    width: 0; }
+  .restaurant__checkout::-webkit-scrollbar-thumb {
+    width: 0; }
 
 
 /*# sourceMappingURL=main.css.map*/
