--- a/src/styles/components/_meal-list.scss
+++ b/src/styles/components/_meal-list.scss
@@ -13,7 +13,7 @@
         width: 2.7rem;
         height: 2.7rem;
         border-radius: 6px;
-        background: #ccc;
+        background: #f9f9f9;
         margin-right: .8rem;
         background-size: cover;
         background-position: center;
@@ -38,5 +38,9 @@
     &__price {
         color: #12b312  ;
         font-size: 1rem;
+    }
+
+    &[active=true] {
+        border: 2px solid $primary;
     }
 }
