--- a/src/styles/components/_checkout-card.scss
+++ b/src/styles/components/_checkout-card.scss
@@ -6,8 +6,8 @@
     border-radius: 11px;
     padding: 8px 10px;
     text-align: center;
-    background: #ccc;
-    color: white;
+    border: 1px solid #ccc;
+    color: black;
 
     margin-right: 10px;
 
