--- a/docs/main.css
+++ b/docs/main.css
@@ -289,8 +289,8 @@ body {
   border-radius: 11px;
   padding: 8px 10px;
   text-align: center;
-  background: #ccc;
-  color: white;
+  border: 1px solid #ccc;
+  color: black;
   margin-right: 10px; }
   .checkout-card .text {
     font-size: .8rem;
