Add multiplier feature

--- a/docs/main.css
+++ b/docs/main.css
@@ -297,6 +297,8 @@ body {
     margin: 2px 0; }
   .checkout-card__hour {
     font-size: 1.2rem; }
+  .checkout-card[active=true] {
+    border: 2px solid #fe5722; }
 
 .splash {
   width: 100%;
