--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,8 +13,10 @@
 @import 'components/meal-list';
 @import 'components/order-bar';
 @import 'components/checkout-card';
+@import 'components/order-field';
 
 // Activities
 @import 'activities/splash';
 @import 'activities/home';
 @import 'activities/restaurant';
+@import 'activities/order-details';
