--- a/src/styles/components/_order-bar.scss
+++ b/src/styles/components/_order-bar.scss
@@ -23,6 +23,10 @@
             margin-bottom: 3px;
             font-size: .8rem;
         }
+        .percentage-ratio{
+            font-size: .65rem;
+            color: #000;
+        }
         .total-price {
             font-size: 1.4rem;
             color: #12b312;
