Add OrdersActivity and ProfileActivity

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,5 @@
 @import 'activities/home';
 @import 'activities/restaurant';
 @import 'activities/order-details';
+@import 'activities/orders';
+@import 'activities/profile';
