Fix OrderDetails and visual update

--- a/src/styles/components/_order-field.scss
+++ b/src/styles/components/_order-field.scss
@@ -4,13 +4,16 @@
     margin: .5rem 0;
 
     &__name {
-        color: #ccc;
+        color: #000;
         font-size: .9rem;
-        font-weight: bolder;
+        font-weight: lighter;
         margin-bottom: 8px;
     }
 
     &__value {
         font-size: 1rem;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+        padding: 15px;
+        font-weight: lighter;
     }
 }
