--- a/docs/main.css
+++ b/docs/main.css
@@ -309,12 +309,15 @@ body {
   flex-flow: column nowrap;
   margin: .5rem 0; }
   .order-field__name {
-    color: #ccc;
+    color: #000;
     font-size: .9rem;
-    font-weight: bolder;
+    font-weight: lighter;
     margin-bottom: 8px; }
   .order-field__value {
-    font-size: 1rem; }
+    font-size: 1rem;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    font-weight: lighter; }
 
 .splash {
   width: 100%;
