--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import 'components/order-bar';
 @import 'components/checkout-card';
 @import 'components/order-field';
+@import 'components/payment-box';
 
 // Activities
 @import 'activities/splash';
