--- a/docs/main.css
+++ b/docs/main.css
@@ -319,6 +319,40 @@ body {
     padding: 15px;
     font-weight: lighter; }
 
+.payment-box {
+  display: flex;
+  justify-content: flex-start;
+  flex-flow: column nowrap;
+  background: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 12px;
+  margin-bottom: .5rem; }
+  .payment-box__header {
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap; }
+  .payment-box__details {
+    display: flex;
+    flex-flow: column nowrap;
+    flex: 1; }
+  .payment-box__name {
+    font-size: 1rem;
+    margin-bottom: 3px; }
+  .payment-box__info {
+    display: flex;
+    flex-flow: row nowrap;
+    flex: 1; }
+  .payment-box__data {
+    font-weight: lighter; }
+  .payment-box__angle {
+    font-size: 1.4rem; }
+  .payment-box__content {
+    display: none; }
+  .payment-box__content[active=true] {
+    display: inline; }
+
 .splash {
   width: 100%;
   height: 100%;
