--- a/docs/main.css
+++ b/docs/main.css
@@ -450,5 +450,25 @@ body {
   .restaurant__checkout::-webkit-scrollbar-thumb {
     width: 0; }
 
+.order-finish {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: #fe5722; }
+  .order-finish__icon {
+    font-size: 7rem;
+    color: white; }
+  .order-finish__text {
+    font-size: 1.7rem;
+    color: white;
+    text-align: center; }
+  .order-finish__description {
+    font-size: 0.7rem;
+    color: white;
+    font-weight: lighter; }
+
 
 /*# sourceMappingURL=main.css.map*/
