--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,4 @@
 @import 'activities/order-details';
 @import 'activities/orders';
 @import 'activities/profile';
+@import 'activities/order-finish';
