--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -52,4 +52,9 @@ body {
         font-size: 1.6rem;
         font-weight: lighter;
     }
+
+    h3{
+        font-size: 1.2rem;
+        font-weight: lighter;
+    }
 }
