--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'components/checkout-card';
 @import 'components/order-field';
 @import 'components/payment-box';
+@import 'components/order-list';
 
 // Activities
 @import 'activities/splash';
