--- a/docs/main.css
+++ b/docs/main.css
@@ -90,6 +90,9 @@ body {
   .activity h2 {
     font-size: 1.6rem;
     font-weight: lighter; }
+  .activity h3 {
+    font-size: 1.2rem;
+    font-weight: lighter; }
 
 .footer {
   font-size: .7rem;
@@ -361,6 +364,58 @@ body {
     margin-top: 10px; }
   .payment-box__question {
     font-weight: lighter; }
+
+.order-list {
+  display: flex;
+  justify-content: flex-start;
+  flex-flow: column nowrap;
+  background: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 12px;
+  margin-bottom: .5rem; }
+  .order-list__header {
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap; }
+  .order-list__image {
+    width: 2.7rem;
+    height: 2.7rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    margin-right: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .order-list__details {
+    display: flex;
+    flex-flow: column nowrap;
+    flex: 1; }
+  .order-list__name {
+    font-size: 1rem;
+    margin-bottom: 3px; }
+  .order-list__info {
+    display: flex;
+    flex-flow: row nowrap;
+    flex: 1; }
+  .order-list__percentage-ratio {
+    font-size: 0.5rem;
+    color: #000000;
+    font-weight: bold; }
+  .order-list__price {
+    color: #48D548;
+    font-weight: bold; }
+  .order-list__data {
+    margin-left: 0.3rem;
+    font-weight: lighter; }
+  .order-list__angle {
+    font-size: 1.4rem; }
+  .order-list__content {
+    display: none; }
+  .order-list__content[active=true] {
+    display: inline;
+    margin-top: 20px; }
 
 .splash {
   width: 100%;
