Add OrderItems view

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@
 @import 'components/order-field';
 @import 'components/payment-box';
 @import 'components/order-list';
+@import 'components/order-items';
 
 // Activities
 @import 'activities/splash';
