--- a/src/styles/components/_order-field.scss
+++ b/src/styles/components/_order-field.scss
@@ -1,19 +1,17 @@
 .order-field {
     display: flex;
     flex-flow: column nowrap;
-    margin: .5rem 0;
+    margin-bottom: 1.6rem;
+    font-size: .9rem;
 
     &__name {
         color: #000;
-        font-size: .9rem;
+        
         font-weight: lighter;
         margin-bottom: 8px;
     }
 
     &__value {
-        font-size: 1rem;
-        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-        padding: 15px;
-        font-weight: lighter;
+
     }
 }
