--- a/src/styles/activities/_order-finish.scss
+++ b/src/styles/activities/_order-finish.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     flex-direction: column;
     background: #fe5722;
+    padding: 0 25px;
+    box-sizing: border-box;
 
     &__icon {
         font-size: 7rem;
@@ -13,13 +15,15 @@
     }
 
     &__text {
+        margin-top: 15px;
         font-size: 1.7rem;
         color: white;
         text-align: center;
     }
 
     &__description{
-        font-size: 0.7rem;
+        margin-top: 20px;
+        font-size: 0.9rem;
         color: white;
         font-weight: lighter;
     }
