--- a/src/styles/components/_order-list.scss
+++ b/src/styles/components/_order-list.scss
@@ -46,7 +46,8 @@
     &__percentage-ratio{
         font-size: 0.5rem;
         color: #000000;
-        font-weight: bold;     
+        font-weight: bold; 
+        margin-bottom: 2px;
     }
 
     &__price{
